--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,17 @@
 
   <body>
 
-    {% include header.html %}
+    <div id="layout" class="pure-g">
+        {% include sidebar.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+        <div class="content pure-u-1 pure-u-md-3-4">
+            <div>
+                {{ content }}
+
+                {% include footer.html %}
+            </div>
+        </div>
     </div>
-
-    {% include footer.html %}
 
   </body>
 
