--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,12 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <p class="post-meta">
+        posted on {{ page.date | date: "%b %-d, %Y" }}
+        {% for tag in page.tags %}
+          <span class="post-category post-category-{{ tag }}">{{ tag }}</span>
+        {% endfor %}
+    </p>
   </header>
 
   <article class="post-content">
